# MAI_OOP

./: .gitignore  README.md  oop2.pages  лаба от 21.09.pages  ооп.pages
.devcontainer/: Dockerfile
lr1/: CMakeLists.txt  main.cpp
lr1/include/: intToBinaryArray.h
lr1/src/: intToBinaryArray.cpp
lr1/test/: tests01.cpp
lr20/: CMakeLists.txt  main.cpp
lr20/include/: Twelve.h
lr20/src/: Twelve.cpp
lr20/test/: test.cpp
lr3/: CMakeLists.txt  main.cpp
lr3/include/: array.h  figure.h  rectangle.h  square.h  trap.h
lr3/src/: array.cpp  rectangle.cpp  square.cpp  trap.cpp
lr3/tests/: test.cpp
lr4/: CMakeLists.txt  main.cpp  program
lr4/include/: array.h  figure.h  point.h  rectangle.h  square.h  trap.h
lr4/tests/: test.cpp
lr5/: CMakeLists.txt  main.cpp
lr5/include/: CustomQueue.h  MemoryPool.h
lr5/src/: CustomQueue.cpp  MemoryPool.cpp
lr5/tests/: test.cpp
